@@ -10,6 +10,8 @@ What's New in Python 3.3 Alpha 1?
 Core and Builtins
 -----------------
 
+- Forbid summing bytes in sum().
+
 - Verify the types of AST strings and identifiers provided by the user before
   compiling them.
 
